# SynchroTraffixAI

./: .gitignore  README.md  pyproject.toml  requirements.txt  tracking.py
config/: config.example.json
src/synchrotraffixai/: __init__.py  config.py  events.py  main.py  pipeline.py
src/synchrotraffixai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
