[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synchrotraffixai"
version = "0.1.0"
description = "Real-time traffic monitoring with vehicle tracking, lane violation checks, crash heuristics, and plate OCR"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "SynchroTraffixAI Contributors" }]
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.10.0",
  "ultralytics>=8.3.0",
  "deep-sort-realtime>=1.3.2",
  "easyocr>=1.7.1",
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "imutils>=0.5.4"
]

[project.scripts]
synchrotraffix = "synchrotraffixai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
